--- a/sales_helper/src/index.css
+++ b/sales_helper/src/index.css
@@ -18,26 +18,26 @@
 
 .text-gradient {
   background: radial-gradient(64.18% 64.18% at 71.16% 35.69%,
-      #def9fa 0.89%,
-      #bef3f5 17.23%,
-      #9dedf0 42.04%,
-      #7de7eb 55.12%,
-      #5ce1e6 71.54%,
-      #33bbcf 100%);
+      #e0fade 0.89%,
+      #c0f5be 17.23%,
+      #9df09d 42.04%,
+      #81eb7d 55.12%,
+      #5ce65c 75.54%,
+      #5aeb47 92.78%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
 }
 
-.bg-blue-gradient {
+.bg-green-gradient {
   background: linear-gradient(157.81deg,
-      #def9fa -43.27%,
-      #bef3f5 -21.24%,
-      #9dedf0 12.19%,
-      #7de7eb 29.82%,
-      #5ce1e6 51.94%,
-      #33bbcf 90.29%);
+      #defadf -43.27%,
+      #bef5be -21.24%,
+      #9df0a1 12.19%,
+      #86eb7d 29.82%,
+      #6ce65c 51.94%,
+      #4dcf33 90.29%);
 }
 
 .bg-black-gradient {
@@ -61,11 +61,11 @@
 }
 
 .bg-discount-gradient {
-  background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
+  background: linear-gradient(125.17deg, #272727 0%, #101d11 100%);
 }
 
 .box-shadow {
-  box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  box-shadow: 0px 20px 100px -10px rgba(66, 91, 68, 0.1);
 }
 
 .sidebar {
@@ -97,7 +97,7 @@
   }
 }
 
-.feature-card:hover {
+.offers-card:hover {
   background: var(--black-gradient);
   box-shadow: var(--card-shadow);
 }
@@ -114,8 +114,8 @@
   background: var(--black-gradient);
 }
 
-.blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+.green__gradient {
+  background: linear-gradient(180deg, rgba(165, 255, 184, 0) 0%, #21762c 100%);
   filter: blur(123px);
 }
 
