--- a/sales_helper/src/index.css
+++ b/sales_helper/src/index.css
@@ -9,7 +9,7 @@
       #ffffff -278.56%,
       #6d6d6d -78.47%,
       #11101d 91.61%);
-  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  --card-shadow: 0px 20px 50px -20px rgba(66, 71, 91, 0.1);
 }
 
 * {
@@ -96,7 +96,8 @@
   }
 }
 
-.offers-card:hover {
+.offers-card:hover,
+.users-card:hover {
   background: var(--black-gradient);
   box-shadow: var(--card-shadow);
 }
